fix: remove font-fg from background wrapping component + fix inter

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 :root {
   --font-fg: "Founders Grotesk", sans-serif;
+  --font-inter: "Inter", sans-serif;
 }
 
 @layer base {
